--- a/_sections/sc-1867-68-c-1-s-7.md
+++ b/_sections/sc-1867-68-c-1-s-7.md
@@ -32,7 +32,7 @@ Interpretation of certain words.
   </dt>
   <dd>
     <p class="definition subsection">
-      <span class="law-label" id="s-7-(2)">(2)</span> The words &ldquo;<span class="defined-term"><dfn>Governor</dfn></span>,&rdquo; &ldquo;<span class="defined-term"><dfn>Governor of Canada</dfn></span>,&rdquo; &ldquo;<span class="defined-term"><dfn>Governor General</dfn></span>,&rdquo; or &ldquo;<span class="defined-term"><dfn>Governor in Chief</dfn></span>&rdquo; shall mean the Governor General for the time being of Canada, or other the Chief Executive Officer or Administrator for the time being carrying on the Government of Canada, on behalf and in the name of the Queen by whatever title he is designated;
+      <span class="law-label" id="s-7-(2)">(2)</span> The words &ldquo;<span class="defined-term"><dfn>Governor</dfn></span>,&rdquo; &ldquo;<span class="defined-term"><dfn>Governor of Canada</dfn></span>,&rdquo; &ldquo;<span class="defined-term"><dfn>Governor General</dfn></span>,&rdquo; or &ldquo;<span class="defined-term"><dfn>Governor in Chief</dfn></span>&rdquo; shall mean the Governor General for the time being of Canada, or other the chief executive officer or administrator for the time being carrying on the Government of Canada, on behalf and in the name of the Queen by whatever title he is designated;
     </p>
   </dd>
   <dt>
@@ -42,27 +42,27 @@ Interpretation of certain words.
   </dt>
   <dd>
     <p class="definition subsection">
-      <span class="law-label" id="s-7-(3)">(3)</span> The words &ldquo;<span class="defined-term"><dfn>Governor in Council</dfn></span>,&rdquo; or &ldquo;<span class="defined-term"><dfn>Governor General in Council</dfn></span>&rdquo; shall mean the Governor General of Canada, or person administering the government of Canada for the time being, acting by and with the advice of, or by and with the advice and consent of, or in conjunction with, the Queen's Privy Council for Canada;
+      <span class="law-label" id="s-7-(3)">(3)</span> The words &ldquo;<span class="defined-term"><dfn>Governor in Council</dfn></span>,&rdquo; or &ldquo;<span class="defined-term"><dfn>Governor General in Council</dfn></span>&rdquo; shall mean the Governor General of Canada, or person administering the government of Canada for the time being, acting by and with the advice of, or by and with the advice and consent of, or in conjunction with, the Queen&rsquo;s Privy Council for Canada;
     </p>
   </dd>
   <dt>
     <p class="marginal-note">
-      &ldquo;<dfn>Lieutenant Governor</dfn>,&rdquo; etc.
+      &ldquo;<dfn>Lieutenant governor</dfn>,&rdquo; etc.
     </p>
   </dt>
   <dd>
     <p class="definition subsection">
-      <span class="law-label" id="s-7-(4)">(4)</span> The words &ldquo;<span class="defined-term"><dfn>Lieutenant Governor</dfn></span>,&rdquo; shall mean the Lieutenant Governor for the time being, or other Chief Executive Officer or Administrator for the time being, carrying on the government of the province or provinces of the Dominion indicated by the Act, by whatever title he is designated.
+      <span class="law-label" id="s-7-(4)">(4)</span> The words &ldquo;<span class="defined-term"><dfn>lieutenant governor</dfn></span>,&rdquo; shall mean the lieutenant governor for the time being, or other chief executive officer or administrator for the time being, carrying on the government of the province or provinces of the Dominion indicated by the Act, by whatever title he is designated.
     </p>
   </dd>
   <dt>
     <p class="marginal-note">
-      &ldquo;<dfn>Lieutenant Governor in Council</dfn>,&rdquo; etc.
+      &ldquo;<dfn>Lieutenant governor in council</dfn>,&rdquo; etc.
     </p>
   </dt>
   <dd>
     <p class="definition subsection">
-      <span class="law-label" id="s-7-(5)">(5)</span> The words &ldquo;<span class="defined-term"><dfn>Lieutenant Governor in Council</dfn></span>&rdquo; shall mean the Lieutenant Governor or person administering the Government of the Province indicated by the Act, for the time being, acting by and with the advice of, or by and with the advice and consent of, or in conjunction with the Executive Council of the said province;
+      <span class="law-label" id="s-7-(5)">(5)</span> The words &ldquo;<span class="defined-term"><dfn>lieutenant governor in council</dfn></span>&rdquo; shall mean the lieutenant governor or person administering the government of the province indicated by the Act, for the time being, acting by and with the advice of, or by and with the advice and consent of, or in conjunction with the executive council of the said province;
     </p>
   </dd>
   <dt>
@@ -82,14 +82,14 @@ Interpretation of certain words.
   </dt>
   <dd>
     <p class="definition subsection">
-      <span class="law-label" id="s-7-(7)">(7)</span> The word &ldquo;<span class="defined-term"><dfn>proclamation</dfn></span>&rdquo; means a proclamation under the Great Seal, and the expression &ldquo;<span class="defined-term"><dfn>Great Seal</dfn></span>&rdquo; means the Great Seal of Canada;
+      <span class="law-label" id="s-7-(7)">(7)</span> The word &ldquo;<span class="defined-term"><dfn>proclamation</dfn></span>&rdquo; means a proclamation under the Great Seal, and the expression &ldquo;<span class="defined-term"><dfn>Great Seal</dfn></span>&rdquo; means the Great Seal of Canada.
     </p>
   </dd>
 </dl>
 
 Governor acting by proclamation.
 {: .marginal-note}
-<span class="law-label" id="s-7-(8)">(8)</span> When the Governor is authorized to do any Act by proclamation, such proclamation is understood to be a proclamation issued under an order of the Governor in Council, but it shall not be necessary that it be mentioned in the proclamation that it is issued under such order;
+<span class="law-label" id="s-7-(8)">(8)</span> When the Governor is authorized to do any Act by proclamation, such proclamation is understood to be a proclamation issued under an order of the Governor in Council, but it shall not be necessary that it be mentioned in the proclamation that it is issued under such order.
 {: .subsection}
 
 <dl class="definition">
@@ -158,17 +158,17 @@ Governor acting by proclamation.
   </dt>
   <dd>
     <p class="definition subsection">
-      <span class="law-label" id="s-7-(15)">(15)</span> The word &ldquo;<span class="defined-term"><dfn>holiday</dfn></span>&rdquo; shall include Sundays, New Year&rsquo;s Day, the Epiphany, the Annunciation, Good Friday, the Ascension, <i lang="la">Corpus Christi</i>, St. Peter and St. Paul&rsquo;s Day, All Saints&rsquo; Day, Conception Day, Easter Monday, Ash Wednesday, Christmas Day, the birthday of the reigning sovereign, and any day appointed by proclamation for a general fast or thanksgiving;
+      <span class="law-label" id="s-7-(15)">(15)</span> The word &ldquo;<span class="defined-term"><dfn>holiday</dfn></span>&rdquo; shall include Sundays, New Year&rsquo;s Day, the Epiphany, the Annunciation, Good Friday, the Ascension, <i lang="la">Corpus Christi</i>, St. Peter and St. Paul&rsquo;s Day, All Saints&rsquo; Day, Conception Day, Easter Monday, Ash Wednesday, Christmas Day, the birthday of the reigning Sovereign, and any day appointed by proclamation for a general fast or thanksgiving;
     </p>
   </dd>
   <dt>
     <p class="marginal-note">
-      &ldquo;<dfn>Oath</dfn>.&rdquo;<br />&ldquo;<dfn>Sworn</dfn>.&rdquo;<br />&ldquo;<dfn>Affirmed</dfn>.&rdquo;<br />Perjury.
+      &ldquo;<dfn>Oath</dfn>.&rdquo;<br />&ldquo;<dfn>Sworn</dfn>.&rdquo;<br />&ldquo;Affirmed.&rdquo;<br />Perjury.
     </p>
   </dt>
   <dd>
     <p class="definition subsection">
-      <span class="law-label" id="s-7-(16)">(16)</span> The word &ldquo;<span class="defined-term"><dfn>oath</dfn></span>&rdquo; shall be construed as meaning a solemn affirmation whenever the context applies to any person and case by whom and in which a solemn affirmation may be made instead of an oath, and in like cases the word &ldquo;<span class="defined-term"><dfn>sworn</dfn></span>&rdquo; shall include the word &ldquo;<span class="defined-term"><dfn>affirmed</dfn></span>&rdquo;:&mdash;And in every case where an oath or affirmation is directed to be made before any person or officer, such person or officer shall have full power and authority to administer the same and to certify its having been made;&mdash;And the willful making of any false statement in any such oath and affirmation shall be willful and corrupt perjury,&mdash;and the willful making of any false statement in any declaration required or authorized by any Act shall be a misdemeanor punishable as willful and corrupt perjury;
+      <span class="law-label" id="s-7-(16)">(16)</span> The word &ldquo;<span class="defined-term"><dfn>oath</dfn></span>&rdquo; shall be construed as meaning a solemn affirmation whenever the context applies to any person and case by whom and in which a solemn affirmation may be made instead of an oath, and in like cases the word &ldquo;<span class="defined-term"><dfn>sworn</dfn></span>&rdquo; shall include the word &ldquo;affirmed&rdquo;:&mdash;And in every case where an oath or affirmation is directed to be made before any person or officer, such person or officer shall have full power and authority to administer the same and to certify its having been made;&mdash;And the willful making of any false statement in any such oath and affirmation shall be willful and corrupt perjury,&mdash;and the willful making of any false statement in any declaration required or authorized by any Act shall be a misdemeanor punishable as willful and corrupt perjury;
     </p>
   </dd>
   <dt>
@@ -178,7 +178,7 @@ Governor acting by proclamation.
   </dt>
   <dd>
     <p class="defintion subsection">
-      <span class="law-label" id="s-7-(17)">(17)</span> The word &ldquo;<span class="defined-term"><dfn>sureties</dfn></span>&rdquo; shall mean sufficienty sureties, and the word &ldquo;<span class="defined-term"><dfn>security</dfn></span>&rdquo; shall mean sufficient security, and where these words are used, one person shall be sufficient therefor unless otherwise expressly required;
+      <span class="law-label" id="s-7-(17)">(17)</span> The word &ldquo;<span class="defined-term"><dfn>sureties</dfn></span>&rdquo; shall mean sufficienty sureties, and the word &ldquo;<span class="defined-term"><dfn>security</dfn></span>&rdquo; shall mean sufficient security, and where these words are used one person shall be sufficient therefor, unless otherwise expressly required;
     </p>
   </dd>
   <dt>
@@ -193,36 +193,36 @@ Governor acting by proclamation.
   </dd>
   <dt>
     <p class="marginal-note">
-      &ldquo;<dfn>Registrar</dfn>,&rdquo; &ldquo;<dfn>Register</dfn>.&rdquo;
+      &ldquo;<dfn>Registrar</dfn>,&rdquo; &ldquo;<dfn>register</dfn>.&rdquo;
     </p>
   </dt>
   <dd>
     <p class="definition subsection">
-      <span clas="law-label" id="s-7-(19)">(19)</span> The words &ldquo;<span class="defined-term"><dfn>Registrar</dfn></span>&rdquo; or &ldquo;<span class="defined-term"><dfn>Register</dfn></span>&rdquo; in any Act, applying to the whole Dominion, shall mean and include indifferently Registrars and Registers in the several Provinces constituting the Dominion, and their Deputies, respectively;
+      <span clas="law-label" id="s-7-(19)">(19)</span> The words &ldquo;<span class="defined-term"><dfn>registrar</dfn></span>&rdquo; or &ldquo;<span class="defined-term"><dfn>register</dfn></span>&rdquo; in any Act, applying to the whole Dominion, shall mean and include indifferently registrars and registers in the several provinces constituting the Dominion, and their deputies, respectively.
     </p>
   </dd>
 </dl>
 
 Contravention of Acts.
 {: .marginal-note}
-<span>(20)</span>{:.law-label}{:#s-7-(20)} Any willful contravention of any Act, which is not made any offence of some other kind, shall be a misdemeanor, and punishable accordingly;
+<span>(20)</span>{:.law-label}{:#s-7-(20)} Any willful contravention of any Act, which is not made any offence of some other kind, shall be a misdemeanor, and punishable accordingly.
 {: .subsection}
 Punishement for contravention.
 {:.marginal-note}
-<span>(21)</span>{:.law-label}{:#s-7-(21)} Whenever any willful contravention of any Act is made an offence of any particular kind or name, the person guilty of such contravention shall, on conviction thereof, be punishable in the manner in which such offence is by law punishable;
+<span>(21)</span>{:.law-label}{:#s-7-(21)} Whenever any willful contravention of any Act is made an offence of any particular kind or name, the person guilty of such contravention shall, on conviction thereof, be punishable in the manner in which such offence is by law punishable.
 {:.subsection}
 Recovery of penalties when no other mode is prescribed.  
 Appropriation.
 {:.marginal-note}
-<span>(22)</span>{:.law-label}{:#s-7-(22)} Whenever any pecuniary penalty or any forfeiture is imposed for any contravention of any Act,---then, if no other mode be prescribed for the recovery thereof, such penalty or forfeiture shall be recoverable with costs by civil action or proceeding at the suit of the Crown only, or of any private party suing as well for the Crown as for himself,---in any form allowed in such case by the law of that Province where it is brought,---before any Court having jurisdiction to the amount of the penalty in cases of simple contract,---upon the evidence of any one credible witness other than the Plaintiff or party interested; And if no other provision be made for the appropriation of such penalty or forfeiture, one half thereof shall belong to the Crown, and the other half shall belong to the private plaintiff, if any there be, and if there be none, the whole shall belong to the Crown;
+<span>(22)</span>{:.law-label}{:#s-7-(22)} Whenever any pecuniary penalty or any forfeiture is imposed for any contravention of any Act,---then, if no other mode be prescribed for the recovery thereof, such penalty or forfeiture shall be recoverable with costs by civil action or proceeding at the suit of the Crown only, or of any private party suing as well for the Crown as for himself,---in any form allowed in such case by the law of that Province where it is brought,---before any court having jurisdiction to the amount of the penalty in cases of simple contract,---upon the evidence of any one credible witness other than the plaintiff or party interested; And if no other provision be made for the appropriation of such penalty or forfeiture, one half thereof shall belong to the Crown, and the other half shall belong to the private plaintiff, if any there be, and if there be none, the whole shall belong to the Crown.
 {:.subsection}
 Crown's share when not otherwise appropriated to form part of Con. Rev. Fund.
 {:.marginal-note}
-<span>(23)</span>{:.law-label}{:#s-7-(23)} Any duty, penalty or sum of money, or the proceeds of any forfeiture, which is by any Act given to the Crown, shall, if no other provision be made respecting it, form part of the Consolidated Revenue Fund of Canada and be accounted for and otherwise dealt with accordingly;
+<span>(23)</span>{:.law-label}{:#s-7-(23)} Any duty, penalty or sum of money, or the proceeds of any forfeiture, which is by any Act given to the Crown, shall, if no other provision be made respecting it, form part of the Consolidated Revenue Fund of Canada and be accounted for and otherwise dealt with accordingly.
 {:.subsection}
 Paying and accounting for moneys appropriated by statute.
 {:.marginal-note}
-<span>(24)</span>{:.law-label}{:#s-7-(24)} If any sum of the public money be by any Act appropriated for any purpose or directed to be paid by the Governor General,---then, if no other provision be made respecting it, such sum shall be payable under Warrant of the Governor General directed to the Receiver General, out of the Consolidated Revenue Fund of Canada; And all persons entrusted with the expenditure of any such sum or any part thereof shall account for the same in such manner and form, with such vouchers, at such periods and to such Officer, as the Governor General may direct;
+<span>(24)</span>{:.law-label}{:#s-7-(24)} If any sum of the public money be by any Act appropriated for any purpose or directed to be paid by the Governor General,---then, if no other provision be made respecting it, such sum shall be payable under warrant of the Governor General directed to the Receiver General, out of the Consolidated Revenue Fund of Canada; And all persons entrusted with the expenditure of any such sum or any part thereof shall account for the same in such manner and form, with such vouchers, at such periods and to such officer, as the Governor General may direct.
 {:.subsection}
 
 <dl class="definition">
@@ -233,28 +233,77 @@ Paying and accounting for moneys appropriated by statute.
   </dt>
   <dd>
     <p class="subsection definition">
-      <span class="law-label" id="s-7-(25)">(25)</span> The word &ldquo;<span class="defined-term"><dfn>Magistrate</dfn></span>&rdquo; shall mean a Justice of the Peace;---the words &ldquo;<span class="defined-term"><dfn>two Justices</dfn></span>&rdquo; shall mean two or more Justices of the Peace, assembled or acting together;&mdash;And if any thing is directed to be done by or before a Magistrate or a Justice of the Peace, or other public functionary or officer, it shall be done by or before one whose jurisdiction or powers extend to the place where such thing is to be done;&mdash;And whenever power is given to any person, officer, or functionary to do or to enforce the doing of any act or thing, all such powers shall be understood to be also given as are necessary to enable such person, officer, or functionary to do or enforce the doing of such act or thing;
+      <span class="law-label" id="s-7-(25)">(25)</span> The word &ldquo;<span class="defined-term"><dfn>magistrate</dfn></span>&rdquo; shall mean a justice of the peace;---the words &ldquo;<span class="defined-term"><dfn>two justices</dfn></span>&rdquo; shall mean two or more justices of the peace, assembled or acting together;&mdash;And if any thing is directed to be done by or before a magistrate or a justice of the peace, or other public functionary or officer, it shall be done by or before one whose jurisdiction or powers extend to the place where such thing is to be done;&mdash;And whenever power is given to any person, officer or functionary to do or to enforce the doing of any act or thing, all such powers shall be understood to be also given as are necessary to enable such person, officer or functionary to do or enforce the doing of such act or thing.
     </p>
   </dd>
 </dl>
 
 Imprisonment where to be, when no special place is mentioned.
 {:.marginal-note}
-<span>(26)</span>{:.law-label}{:#s-7-(26)} If in any Act, any party is directed to be imprisoned or committed to prison, such imprisonment or committal shall, if no other place be mentioned or provided by law, be in or to the common jail of the locality in which the order for such imprisonment is made, or if there be no common jail there, then in or to that common jail which is nearest to such locality; and the keeper of any such common jail shall receive such person, and him safely keep and detain in such common jail under his custody until discharged in due course of Law, or bailed in cases in which bail may by Law be taken;
+<span>(26)</span>{:.law-label}{:#s-7-(26)} If in any Act, any party is directed to be imprisoned or committed to prison, such imprisonment or committal shall, if no other place be mentioned or provided by law, be in or to the common jail of the locality in which the order for such imprisonment is made, or if there be no common jail there, then in or to that common jail which is nearest to such locality; and the keeper of any such common jail shall receive such person, and him safely keep and detain in such common jail under his custody until discharged in due course of Law, or bailed in cases in which bail may by Law be taken.
 {:.subsection}
 Words giving power to appoint include power to remove.
 {:.marginal-note}
-<span>(27)</span>{:.law-label}{:#s-7-(27)} Words authorizing the appointment of any public officer or functionary, or any deputy, shall include the power of removing him, re-appointing him or appointing another in his stead, in the discretion of the authority in whom the power of appointment is vested;
+<span>(27)</span>{:.law-label}{:#s-7-(27)} Words authorizing the appointment of any public officer or functionary, or any deputy, shall include the power of removing him, re-appointing him or appointing another in his stead, in the discretion of the authority in whom the power of appointment is vested.
 {:.subsection}
-Directions to public officer, to apply to his succesors and his Deputy.
+Directions to public officer, to apply to his succesors and his deputy.
 {:.marginal-note}
-<span>(28)</span>{:.law-label}{:#s-7-(28)} Words directing or empowering a public officer or functionary to do any act or thing, or otherwise applying to him by his name of office, shall include his successors in such office, and his or their lawful Deputy;
+<span>(28)</span>{:.law-label}{:#s-7-(28)} Words directing or empowering a public officer or functionary to do any act or thing, or otherwise applying to him by his name of office, shall include his successors in such office, and his or their lawful deputy.
 {:.subsection}
 Appointments by Governor to be during pleasure.
 {:.marginal-note}
-<span>(29)</span>{:.law-label}{:#s-7-(29)} All officers now appointed or hereafter to be appointed by the Governor General whether by Commission or otherwise shall remain in office during pleasure only, unless otherwise expressed in their Commissions or appointments.
+<span>(29)</span>{:.law-label}{:#s-7-(29)} All officers now appointed or hereafter to be appointed by the Governor General whether by commission or otherwise shall remain in office during pleasure only, unless otherwise expressed in their commissions or appointments.
 {:.subsection}
 Words constituting a corporation to vest certain powers in it.
 {:.marginal-note}
-<span>(30)</span>{:.law-label}{:#s-7-(30)} Words making any association or number of persons a corporation or body politic and corporate, shall vest in such corporation, power to sue and be sued, contract and be contracted with, by their corporate name, to have a common seal, and to alter or change the same at their pleasure, and to have perpetual succession, and power to acquire and hold personal property or moveables for the purposes for which the corporation is constituted, and to alienate the same at pleasure; and shall also vest in any majority of the members of the corporation the power to bind the others by their acts; and shall exempt the individual members of the corporation from personal liability for its debts or obligations or acts, provided they do not contravene the provisions of the Act incorporating them;---But no corporation shall carry on the business of banking unless when such power is expressly conferred on them by the Act creating such corporation;
+<span>(30)</span>{:.law-label}{:#s-7-(30)} Words making any association or number of persons a corporation or body politic and corporate, shall vest in such corporation, power to sue and be sued, contract and be contracted with, by their corporate name, to have a common seal, and to alter or change the same at their pleasure, and to have perpetual succession, and power to acquire and hold personal property or moveables for the purposes for which the corporation is constituted, and to alienate the same at pleasure; and shall also vest in any majority of the members of the corporation the power to bind the others by their acts; and shall exempt the individual members of the corporation from personal liability for its debts or obligations or acts, provided they do not contravene the provisions of the Act incorporating them;---But no corporation shall carry on the business of banking unless when such power is expressly conferred on them by the Act creating such corporation.
+{:.subsection}
+Slight deviation from forms not to invalidate.
+{:.marginal-note}
+<span>(31)</span>{:.law-label}{:#s-7-(31)} Where forms are prescribed, slight deviations therefrom, not affecting the substance or calculated to mislead, shall not vitiate them.
+{:.subsection}
+Power to make by-laws, what included by.
+{:.marginal-note}
+<span>(32)</span>{:.law-label}{:#s-7-(32)} Where powers to make by-laws, regulations, rules, or orders is conferred, it shall include the power to alter or revoke the same and make others.
+{:.subsection}
+Acts not to affect the Crown, unless specially declared to do so.  
+As to Acts of private nature.
+{:.marginal-note}
+<span>(33)</span>{:.law-label}{:#s-7-(33)} No provision or enactment in any Act shall affect in any manner or way whatsoever the rights of Her Majesty, Her Heirs or Successors, unless it is expressly stated therein that Her Majesty shall be bound thereby; nor if such Act be of the nature of a private Act shall it affect the rights of any person or of any body politic, corporate, or collegiate, such only excepted as are therein mentioned or referred to.
+{:.subsection}
+Power always reserved to Parliament to repeal or amend any Act.  
+As to bank charters.
+{:.marginal-note}
+<span>(34)</span>{:.law-label}{:#s-7-(34)} Every Act shall be so construed as to reserve to Parliament the power of repealing or amending it, and of revoking, restricting or modifying any power, privilege or advantage thereby vested in or granted to any person or party, whenever such repeal, amendment, revocation, restriction or modification is deemed by Parliament to be required for the public good; And unless it is otherwise expressly provided in any Act passed for chartering any bank, it shall be in the discretion of the Parliament at any time thereafter to make such provisions and impose such restrictions with respect to the amount and description of notes which may be issued by such bank as to Parliament appears expedient.
+{:.subsection}
+Effect of repeal of Act on persons acting under it.  
+Not to effect certain proceedings.
+{:.marginal-note}
+<span>(35)</span>{:.law-label}{:#s-7-(35)} Where any Act is repealed wholly or in part and other provisions substituted, all officers, persons, bodies politic or corporate acting under the old law shall continue to act as if appointed under the new law, until others are appointed in their stead; and all proceedings taken under the old law shall be taken up and continued under the new law when not inconsistent therewith; and all penalties and forfeitures may be recovered and all proceedings had in relation to matters which have happened before the repeal in the same manner as if the law were still in force, pursuing the new provisions as far as they can be adapted to the old law.
+{:.subsection}
+As to acts, etc., done before repeal.
+{:.marginal-note}
+<span>(36)</span>{:.law-label}{:#s-7-(36)} The repeal of an Act at any time shall not affect any act done or any right or right of action existing, accruing, accrued or established or any proceedings commenced in a civil cause, before the time when such repeal shall take effect; but the proceedings in such case shall be conformable vhen necessary to the repealing Act.
+{:.subsection}
+Offences committed and penalties incurred not affected by repeal.
+{:.marginal-note}
+<span>(37)</span>{:.law-label}{:#s-7-(37)} No offence committed and no penalty or forfeiture incurred and no proceeding pending under any Act at any time repealed shall be affected by the repeal, except that the proceedings shall be conformable when necessary to the repealing Act, and that where any penalty, forfeiture or punishment shall have been mitigated by any of the provisions of the repealing Act, such provisions shall be extended and applied to any judgment to be pronounced after such repeal.
+{:.subsection}
+All Acts to be deemed public Acts, as regards pleading.  
+Proof of Acts.
+{:.marginal-note}
+<span>(38)</span>{:.law-label}{:#s-7-(38)} Every Act shall, unless by express provision it is declared to be a private Act, be deemed to be a public Act, and shall be judicially noticed by all judges, justices of the peace, and others without being specially pleaded;---And all copies of Acts, public or private, printed by the Queen's Printer, shall be evidence of such Acts and of their contents, and every copy purporting to be printed by the Queen's Printer shall be deemed to be so printed, unless the contrary be shown.
+{:.subsection}
+Preamble to be a part of Act.  
+All Acts remedial, and to be construed as such.
+{:.marginal-note}
+<span>(39)</span>{:.law-label}{:#s-7-(39)} The preamble of every such Act as aforesaid shall be deemed a part thereof intended to assist in explaining the purport and object of the Act;---And every Act and every provision or enactment thereof shall be deemed remedial, whether its immediate purport be to direct the doing of any thing which Parliament deems to be for the public good or to prevent or punish the doing of any thing which it deems contrary to the public good,---and shall accordingly receive such fair, large and liberal construction and interpretation as will best ensure the attainment of the object of the Act and of such provision or enactment according to their true intent, meaning and spirit.
+{:.subsection}
+Applicable rules of construction not excluded.
+{:.marginal-note}
+<span>(40)</span>{:.law-label}{:#s-7-(40)} Nothing in this section shall exclude the application to any Act of any rule of construction applicable thereto and not inconsistent with this section.
+{:.subsection}
+Provisions herein to apply to this Act.
+{:.marginal-note}
+<span>(41)</span>{:.law-label}{:#s-7-(41)} The provisions of this Act shall apply to the construction thereof, and to the words and expressions used therein.
 {:.subsection}
