add section 10 of S.C. 1867-68 c.1, etc.

--- a/_chapters/sc-1867-68-c-01.md
+++ b/_chapters/sc-1867-68-c-01.md
@@ -39,6 +39,14 @@ bill: No. 2
             </span>
           </a>
         </li>
+        <li>
+          <span class="section-range">16 -</span>
+          <a href="#short-title">
+            <span class="h-title-text1">
+              Short Title
+            </span>
+          </a>
+        </li>
       </ul>
     </li>
   </ul>
@@ -51,10 +59,10 @@ Preamble.
 ## Form of Enacting ##
 {: .part}
 
-{% assign samechapter = site.sections | where: "chapter", page.chapter | where: "volume", page.volume %}
+{% assign samechapter = site.sections | where: "chapter", page.chapter | where: "volume", page.volume | sort:"section" %}
 
 {% for section in samechapter %}
-  {% if section.section >= 1 %}
+  {% if section.section > 0 %}
     {%- unless section.section > 2 -%}
     {{ section.content }}
     {% endunless %}
@@ -65,7 +73,7 @@ Preamble.
 {: .part}
 
 {% for section in samechapter %}
-  {% if section.section >= 3 %}
+  {% if section.section > 2 %}
     {%- unless section.section > 8 -%}
       {{ section.content }}
     {% endunless %}
@@ -76,7 +84,7 @@ Preamble.
 {: .part}
 
 {% for section in samechapter %}
-  {% if section.section >= 9 %}
+  {% if section.section > 8 %}
     {%- unless section.section > 15 -%}
       {{ section.content }}
     {% endunless %}
